--- a/BookStore/src/main/resources/templates/fragments/header.html
+++ b/BookStore/src/main/resources/templates/fragments/header.html
@@ -5,20 +5,20 @@
         <li><a th:href="@{/}">Books</a></li>
         <li><a th:href="@{/}">Authors</a></li>
         <li><a th:href="@{/}">Categories</a></li>
-        <th:block sec:authorize="!isAnonymous()">
+        <th:block sec:authorize="hasRole('USER')">
         <li><a th:href="@{/users/profile}">Profile</a></li>
         <li><a th:href="@{/}">Shopping Bag</a></li>
+        </th:block>
         <th:block sec:authorize="hasRole('ADMIN')">
         <li><a th:href="@{/users/admin}">Admin Board</a></li>
         </th:block>
-        </th:block>
     </ul>
     <ul>
-        <th:block sec:authorize="isAnonymous()">
+        <th:block sec:authorize="!isAuthenticated()">
         <li><a th:href="@{/users/login}">Login</a></li>
         <li><a th:href="@{/users/register}">Register</a></li>
         </th:block>
-        <th:block sec:authorize="!isAnonymous()">
+        <th:block sec:authorize="isAuthenticated()">
         <li><form
                 th:method="POST"
                 th:action="@{/users/logout}"
