--- a/BookStore/src/main/resources/templates/add-book.html
+++ b/BookStore/src/main/resources/templates/add-book.html
@@ -24,20 +24,10 @@ xmlns:th="http://www.thymeleaf.org">
                 </small>
             </div>
             <div class="input-field">
-                <label for="authorId" class="sr-only"></label>
-                <select th:field="*{authorId}" th:errorclass="is-invalid" class="form-control">
-                    <option value="">- Select author -</option>
-                    <option th:each="author: ${allAuthors}" th:value="${author.id}" th:text="${author.name}"></option>
-                </select>
-                <small th:if="${#fields.hasErrors('authorId')}" class="errors alert alert-danger">
-                    <span th:errors="*{authorId}"></span>
-                </small>
-            </div>
-            <div class="input-field">
-                <label for="newAuthorName" class="sr-only"></label>
-                <input th:field="*{newAuthorName}" type="text" id="newAuthorName" name="newAuthorName" placeholder="New Author Name" th:errorclass="is-invalid">
-                <small th:if="${#fields.hasErrors('newAuthorName')}" class="errors alert alert-danger">
-                    <span th:errors="*{newAuthorName}"></span>
+                <label for="author" class="sr-only"></label>
+                <input th:field="*{author}" type="text" id="author" name="author" placeholder="author" th:errorclass="is-invalid">
+                <small th:if="${#fields.hasErrors('author')}" class="errors alert alert-danger">
+                    <span th:errors="*{author}"></span>
                 </small>
             </div>
             <div class="input-field">
