--- a/BookStore/src/main/resources/templates/book-detail.html
+++ b/BookStore/src/main/resources/templates/book-detail.html
@@ -12,13 +12,15 @@ xmlns:th="http://www.thymeleaf.org">
 <body>
 <header th:replace="fragments/header"></header>
 
-    <main  class="book-details">
-            <h1>Book titel</h1>
-            <a href="#">Author name</a>
-            <img src="/images/first_lie_wins.jpg" alt="">
-            <span>price</span>
-            <span>categoryName</span>
-            <p>Description</p>
+    <main  class="books-main">
+        <div class="book-details" th:object="${bookDetails}">
+            <h1 th:text="*{title}">Book title</h1>
+            <a th:text="*{authorName.name}" href="#">Author name</a>
+            <img th:src="@{*{imageURL}}" alt="Book Image" />
+            <span th:text="*{category}">Category Name</span>
+            <span th:text="${bookDetails.price}">Price</span>
+            <p th:text="*{description}">Description</p>
+        </div>
     </main>
 
     <footer th:replace="fragments/footer"></footer>
