--- a/BookStore/src/main/resources/templates/admin.html
+++ b/BookStore/src/main/resources/templates/admin.html
@@ -29,7 +29,7 @@ xmlns:th="http://www.thymeleaf.org">
             <ul>
                 <li><a th:href="@{/book/add}">Add Book</a></li>
                 <li><a href="#">Delete Book</a></li>
-                <li><a href="#">Edit Book</a></li>
+                <li><a th:href="@{/category/add}">Add Category</a></li>
             </ul>
         </div>
     </main>
