--- a/BookStore/src/main/resources/templates/book-detail.html
+++ b/BookStore/src/main/resources/templates/book-detail.html
@@ -17,7 +17,7 @@ xmlns:th="http://www.thymeleaf.org">
             <h1 th:text="*{title}">Book title</h1>
             <a th:href="@{/author/{id}(id=*{author.id})}" th:text="*{author.name}">Author name</a>
             <img th:src="@{*{imageURL}}" alt="Book Image" />
-            <span th:text="*{category}">Category Name</span>
+            <span th:text="*{category.category}">Category Name</span>
             <span th:text="${bookDetails.price}">Price</span>
             <p th:text="*{description}">Description</p>
         </div>
