--- a/BookStore/src/main/resources/templates/fragments/header.html
+++ b/BookStore/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
     <ul>
         <li><a th:href="@{/}">Home</a></li>
         <li><a th:href="@{/books}">Books</a></li>
-        <li><a th:href="@{/}">Categories</a></li>
+        <li><a th:href="@{/categories/all}">Categories</a></li>
         <th:block sec:authorize="hasRole('USER')">
         <li><a th:href="@{/users/profile}">Profile</a></li>
         <li><a th:href="@{/}">Shopping Bag</a></li>
