--- a/BookStore/src/main/resources/templates/admin.html
+++ b/BookStore/src/main/resources/templates/admin.html
@@ -28,7 +28,7 @@ xmlns:th="http://www.thymeleaf.org">
             </div>
             <ul>
                 <li><a th:href="@{/book/add}">Add Book</a></li>
-                <li><a href="#">Delete Book</a></li>
+                <li><a th:href="@{/delete-books}">Delete Book</a></li>
                 <li><a th:href="@{/category/add}">Add Category</a></li>
             </ul>
         </div>
