--- a/BookStore/src/main/resources/templates/book-detail.html
+++ b/BookStore/src/main/resources/templates/book-detail.html
@@ -7,6 +7,7 @@ xmlns:th="http://www.thymeleaf.org">
     <title>Book store</title>
     <link rel="stylesheet" href="/css/background.css">
     <link rel="stylesheet" href="/css/information.css">
+    <script src="/js/search.js" defer></script>
     
 </head>
 <body>
