--- a/BookStore/src/main/resources/templates/index.html
+++ b/BookStore/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
         <title>Book store</title>
         <link rel="stylesheet" href="/css/background.css">
         <link rel="stylesheet" href="/css/styles.css">
+        <script src="/js/search.js" defer></script>
     </head>
 
     <body>
