--- a/BookStore/src/main/resources/templates/profile.html
+++ b/BookStore/src/main/resources/templates/profile.html
@@ -8,6 +8,7 @@ xmlns:th="http://www.thymeleaf.org">
     <title>Book store</title>
     <link rel="stylesheet" href="/css/background.css">
     <link rel="stylesheet" href="/css/information.css">
+    <script src="/js/search.js" defer></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
