--- a/BookStore/src/main/resources/templates/index.html
+++ b/BookStore/src/main/resources/templates/index.html
@@ -23,14 +23,10 @@
                 <span style="--i:7;"><img th:src="@{/images/the-teacher.jpg}" alt=""></span>
                 <span style="--i:8;"><img th:src="@{/images/this-summer-will-be-different.jpg}" alt=""></span>
             </div>
-            <blockquote class="quote">
-                “A truly good book is something as natural, 
-                and as unexpectedly and unaccountably fair and perfect, 
-                as a wild flower discovered on the prairies of the West or in the jungles of the East. 
-                Genius is a light which makes the darkness visible,
-                 like the lightning’s flash, which perchance shatters the temple of knowledge itself,
-                 --and not a taper lighted at the hearth-stone of the race,
-                  which pales before the light of common day.”
+            <blockquote for="lang" th:text="#{nav_bar_quote}" class="quote">
+                “A truly good book is something as natural,
+                and as unexpectedly and unaccountably fair and perfect,
+                as a wild flower discovered on the prairies of the West or in the jungles of the East.”
                 <cite> ― Henry David Thoreau</cite>
             </blockquote>
             
